# isdf_padel

./: .claudeignore  .gitignore  AGENTS.md  README.md
project/: .gitignore  Cargo.toml  README.md  build.rs  debug_trace.jsonl  target
project/.cargo/: config.toml
project/assets/animations/: character_animations.anim.ron
project/assets/config/: debug_fields.ron  game_config.ron  replay_config.ron  simulation_config.ron  simulation_debug.ron  simulation_stress.ron  simulation_test.ron
project/docs/1_project/: 10001_concept.md  10002_completion_plan.md
project/docs/2_architecture/: 20000_overview.md  20001_layers.md  20002_dependencies.md  20004_ecs_overview.md  20005_event_system.md  20006_input_system.md
project/docs/3_ingame/: 30000_overview.md  30009_mvp_scope.md  30010_v02_scope.md  30011_v03_scope.md  30012_v04_scope.md
project/docs/7_tools/: 70000_overview.md
project/docs/8_data/: 80101_game_constants.md  80701_point_config.md  80703_set_config.md  87103_replay_config.md
project/docs/9_reference/: 90000_overview.md
project/docs/_deprecated/: 30502_wall_design.md
project/qa_reports/2026-01-17_150254/: narrative.md  qa_cycle_report.md  qa_review.md  trace.jsonl
project/qa_reports/2026-01-19_072511/: narrative.md  qa_cycle_report.md  qa_review.md  trace.jsonl
project/qa_reports/baseline_phase3/: narrative.md  qa_cycle_report.md  result.json  trace.jsonl
project/scripts/: clear-replays.sh  qa_cycle.sh
project/src/: lib.rs  main.rs
project/src/character/: animation.rs  bundle.rs  components.rs  mod.rs  systems.rs
project/src/components/: ai.rs  ball.rs  (+6 more)
project/tasks/: .taskrc.yaml  README.md
(+689 files in other folders)
